refactoring, need fix tests